--- a/src/Veldrid.ImGui/Veldrid.ImGui.csproj
+++ b/src/Veldrid.ImGui/Veldrid.ImGui.csproj
@@ -50,7 +50,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ImGui.NET" Version="1.87.3" />
+    <!-- <PackageReference Include="ImGui.NET" Version="1.87.3" /> -->
+    <ProjectReference Include="..\..\..\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(UseStableVersions)' == 'true'" >
